--- a/testimonials-grid/index.html
+++ b/testimonials-grid/index.html
@@ -101,7 +101,7 @@
     </div>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-      <a href="#">Yogie Alfin Salim</a>.
+      <a href="https://github.com/yogiealfin">Yogie Alfin Salim</a>.
     </footer>
   </body>
 </html>
