--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -9,17 +9,17 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <img src="images/image-qr-code.png" class="card-image" />
+    <section class="container">
+      <main class="card">
+        <img src="images/image-qr-code.png" class="card-image" alt="QR Code Image" />
         <div class="text-container">
-          <h3 class="card-header">Improve your front-end skills by building projects</h3>
+          <h1 class="card-header">Improve your front-end skills by building projects</h1>
           <p class="card-quote">
             Scan the QR code to visit Frontend Mentor and take your coding skill to the next level
           </p>
         </div>
-      </div>
-    </div>
+      </main>
+    </section>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
       <a href="https://github.com/yogiealfin">Yogie Alfin Salim</a>.
