fix html semantic

--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -9,8 +9,8 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <section class="container">
-      <main class="card">
+    <main class="container">
+      <section class="card">
         <img src="images/image-qr-code.png" class="card-image" alt="QR Code Image" />
         <div class="text-container">
           <h1 class="card-header">Improve your front-end skills by building projects</h1>
@@ -18,8 +18,8 @@
             Scan the QR code to visit Frontend Mentor and take your coding skill to the next level
           </p>
         </div>
-      </main>
-    </section>
+      </section>
+    </main>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
       <a href="https://github.com/yogiealfin">Yogie Alfin Salim</a>.
