--- a/product-preview-card-component/index.html
+++ b/product-preview-card-component/index.html
@@ -8,7 +8,7 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <article class="card">
+    <main class="card">
       <picture class="image-container">
         <source srcset="images/image-product-desktop.jpg" media="(min-width: 600px)" />
         <img src="images/image-product-mobile.jpg" alt="Perfume Photo" />
@@ -20,13 +20,13 @@
           A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator for the House of
           CHANEL.
         </p>
-        <section class="price-container">
+        <div class="price-container">
           <p class="discount-price">$149.99</p>
           <p class="original-price">$169.99</p>
-        </section>
+        </div>
         <button class="button"><img src="images/icon-cart.svg" alt="cart image" />Add to Cart</button>
       </div>
-    </article>
+    </main>
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
       <a href="https://github.com/yogiealfin">Yogie Alfin Salim</a>.
