fix hover effect

--- a/nft-preview-card-component/index.html
+++ b/nft-preview-card-component/index.html
@@ -13,6 +13,7 @@
     <main class="card">
       <picture>
         <img src="images/image-equilibrium.jpg" alt="Main image of the website" class="card-image" />
+        <div class="overlay"><img src="images/icon-view.svg" alt="eye icon" /></div>
       </picture>
       <h1 class="card-title">Equilibrium #3429</h1>
       <p class="card-description">Our Equilibrium collection promotes balance and calm.</p>
