--- a/results-summary-component/index.html
+++ b/results-summary-component/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
     <title>Frontend Mentor | Results summary component</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
@@ -17,10 +18,10 @@
             <p>You scored higher than 65% of the people who have taken these tests.</p>
           </div>
         </div>
-        <div class="summary grid-flow" data-spacing="large">
+        <div class="summary grid-container" data-spacing="large">
           <h2 class="section-title">Summary</h2>
           <div class="grid-container">
-            <div class="summary-item">
+            <div class="summary-item" data-item-type="accent-1">
               <div class="flex-container">
                 <svg
                   class="summary-icon"
@@ -31,6 +32,7 @@
                   viewBox="0 0 20 20"
                 >
                   <path
+                    stroke="#F55"
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="1.25"
@@ -41,7 +43,7 @@
               </div>
               <p class="summary-score"><span>80</span> / 100</p>
             </div>
-            <div class="summary-item">
+            <div class="summary-item" data-item-type="accent-2">
               <div class="flex-container">
                 <svg
                   class="summary-icon"
@@ -52,6 +54,7 @@
                   viewBox="0 0 20 20"
                 >
                   <path
+                    stroke="#FFB21E"
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="1.25"
@@ -76,7 +79,7 @@
               </div>
               <p class="summary-score"><span>92</span> / 100</p>
             </div>
-            <div class="summary-item">
+            <div class="summary-item" data-item-type="accent-3">
               <div class="flex-container">
                 <svg
                   class="summary-icon"
@@ -87,6 +90,7 @@
                   viewBox="0 0 20 20"
                 >
                   <path
+                    stroke="#00BB8F"
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="1.25"
@@ -97,7 +101,7 @@
               </div>
               <p class="summary-score"><span>61</span> / 100</p>
             </div>
-            <div class="summary-item">
+            <div class="summary-item" data-item-type="accent-4">
               <div class="flex-container">
                 <svg
                   class="summary-icon"
@@ -108,6 +112,7 @@
                   viewBox="0 0 20 20"
                 >
                   <path
+                    stroke="#1125D6"
                     stroke-linecap="round"
                     stroke-linejoin="round"
                     stroke-width="1.25"
@@ -125,6 +130,7 @@
               </div>
               <p class="summary-score"><span>72</span> / 100</p>
             </div>
+            <button class="button">Continue</button>
           </div>
         </div>
       </div>
@@ -132,7 +138,7 @@
 
     <footer class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-      <a href="#">Your Name Here</a>.
+      <a href="https://github.com/yogiealfin">Yogie Alfin Salim</a>.
     </footer>
   </body>
 </html>
